# semantic-scholar-mcp

./: .gitignore  ACTIVITY.md  ANALYSIS.md  CONFIGURATION.md  LICENSE  PLAN.md  PROMPT.md  README.md  SPEC.md  pyproject.toml  ralph.sh
src/semantic_scholar_mcp/: __init__.py  bibtex.py  cache.py  circuit_breaker.py  client.py  config.py  exceptions.py  models.py  paper_tracker.py  rate_limiter.py  server.py
src/semantic_scholar_mcp/tools/: __init__.py  _common.py  authors.py  papers.py  recommendations.py  tracking.py
tasks/: prd-code-quality-improvements.md
tests/: __init__.py  conftest.py  test_author_consolidation.py  test_bibtex.py  test_cache.py  test_circuit_breaker.py  test_client.py  test_concurrency.py  test_config.py  test_get_author_top_papers.py  test_integration.py  test_models.py  test_paper_tracker.py  test_rate_limiter.py  test_server.py  test_tracking.py
